# drf_shoppets

./: categories.json  manage.py  product.json  pyproject.toml
catalog/: serializers.py
drf_shoppets/: asgi.py  settings.py  urls.py  wsgi.py
orders/: abstractmodels.py  admin.py  managers.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py  0003_sellorderitem_check_item.py
orders/templates/orders/: product_list.html
products/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_article_number_and_more.py  0003_alter_product_slug.py  0004_alter_product_image.py
sellprice/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
sellprice/migrations/: 0001_initial.py  0002_remove_sellprice_unique_sell_price_and_more.py  0003_alter_selldiscount_options_alter_sellprice_options.py  0004_remove_selldiscount_unique_discount_and_more.py  0005_sellprice_price_greater_than_zero.py
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py
warehouse/: apps.py  models.py
warehouse/migrations/: 0001_initial.py
