[tool.poetry]
name = "shoppets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
pillow = "^10.2.0"
psycopg = {extras = ["binary"], version = "^3.1.17"}
django-mptt = "^0.16.0"
django-mptt-admin = "^2.6.1"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
